# p2pvr

./: Cargo.toml  Trunk.toml  index.html
3rd-party-crates/bevy-tnua2/: Cargo.toml
3rd-party-crates/bevy-tnua2/avian3d/: Cargo.toml
3rd-party-crates/unavi-avatar/: Cargo.toml
3rd-party-crates/unavi-avatar/src/: fallback.rs  lib.rs
3rd-party-crates/unavi-player/: Cargo.toml
3rd-party-crates/unavi-player/examples/: player.rs
3rd-party-crates/unavi-player/src/: body.rs  controls.rs  input.rs  lib.rs  look.rs
src/: file_sharing.rs  main.rs  networking.rs
src/custom_audio/: audio_output.rs  microphone.rs  mod.rs  spatial_audio.rs
src/voice_chat/: mod.rs
