[package]
name = "p2pvr"
version = "0.1.0"
edition = "2021"

[dependencies]
avian3d = { path = "./3rd-party-crates/avian/crates/avian3d", features = ["serialize"]}
avian_interpolation3d = { path = "./3rd-party-crates/avian_interpolation/crates/avian_interpolation3d"}
avian_pickup = { path = "./3rd-party-crates/avian_pickup" }
bevy = { version = "0.14.2", features = ["ktx2" ] }
bevy_matchbox = { version = "0.10.0", features = ["signaling"] }
unavi-player = { path = "./3rd-party-crates/unavi-player" }
bevy_basic_portals = "0.6.0"
bevy_vrm = "0.0.12"
bevy-tnua-physics-integration-layer = { path = "./3rd-party-crates/bevy-tnua2/physics-integration-layer" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
unavi-avatar = { path = "./3rd-party-crates/unavi-avatar"}
web-sys = { version = "0.3.70", features = ["Navigator", "MediaDevices", "MediaStreamConstraints", "MediaStream", "HtmlMediaElement", "MediaStreamAudioSourceNode", "AudioContext", "ScriptProcessorNode", "AudioProcessingEvent", "AudioBuffer", "AudioDestinationNode"] }

rodio = "0.19.0"
cpal = { version = "0.15.3", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2.93"
# `gloo` is a utility crate which improves ergonomics over direct `web-sys` usage.
gloo = "0.11.0"
bevy_web_file_drop = "0.0.6"
bevy_blob_loader = "0.0.6"
bevy_embedded_assets = "0.11.0"
wasm-bindgen-futures = "0.4.43"
futures = "0.3.30"
bevy_health_bar3d = "3.3.0"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

#[dependencies.opus]
#version = "0.3.0"

[dependencies.opus]
git = "https://github.com/Schmarni-Dev/opus-rs"
branch = "unsafe-libopus"
default-features = false
features = [
    "unsafe-libopus-backend",
]