[package]
name = "unavi-avatar"
publish = false
version = "0.0.1"
edition = "2021"

[dependencies]
avian3d = { path = "../avian/crates/avian3d"}
bevy = "0.14.2"
bevy_vrm = "0.0.11"
paste = "1.0.15"

[dev-dependencies]
#bevy-inspector-egui.workspace = true
bevy_egui = "0.29.0"
#bevy_panorbit_camera.workspace = true
