[package]
name = "unavi-player"
publish = false
version = "0.0.1"
edition = "2021"

[dependencies]
avian3d = { path = "../avian/crates/avian3d"}
bevy-tnua = { path = "../bevy-tnua2" }
bevy-tnua-avian3d = { path = "../bevy-tnua2/avian3d" }
bevy = "0.14.2"
bevy_vrm = { git = "https://github.com/unavi-xyz/bevy_vrm" }
unavi-avatar = { path = "../unavi-avatar" }

[target.'cfg(target_family = "wasm")'.dependencies]
web-sys = { version = "0.3.68", features = ["Navigator", "Window"] }

[dev-dependencies]
bevy_basic_portals = "0.6.0"
